--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo_catgen_favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,7 +14,7 @@
 
     <meta
       name="description"
-      content="refine | Build your React-based CRUD applications, without constraints."
+      content="CatGen | Store your laboratory data with ease."
     />
     <meta
       data-rh="true"
@@ -39,9 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>
-      refine - Build your React-based CRUD applications, without constraints.
-    </title>
+    <title>CatGen - Store your laboratory data with ease.</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
   <body>
